TAG:  qcreports_db-3-3-0-3
TAG:  qcreports_db-3-3-0-2
DATE: 09/27/2005
STAFF: lec
CHANGES:
1) goStats.sh; added Fantom3
2) added PRB_Strain_PrivateRef.sql

TAG:  qcreports_db-pirsfload-BP
DATE: 09/17/2005
STAFF: mbw
CHANGES:
1) pirsfload

TAG:  qcreports_db-3-3-0-1
DATE: 08/23/2005
STAFF: lec
RELEASE: A
1) OMIM branch merge

TAG:  qcreports_db-3-2-2-11
DATE: 08/11/2005
STAFF: mbw
RELEASE: A
CHANGES: fixed qcr.html file

TAG:  qcreports_db-3-2-2-10
DATE: 08/08/2005
STAFF: lec
RELEASE: A
CHANGES: 
1) TR 7013/GXD_ImageCheck.sql

TAG:  qcreports_db-3-2-2-9
DATE: 08/08/2005
STAFF: mbw
RELEASE: A
CHANGES:
1) merged tr6046 to trunk

TAG: qcreports_db-tr6046-2
DATE: 08/04/05
STAFF: mbw
CHANGES:
1) modified qcr.html

TAG: qcreports_db-tr6046-1
DATE: 08/03/05
STAFF: mbw
CHANGES:
1) Branch tag

TAG:  qcreports_db-3-2-2-8
TAG:  qcreports_db-3-2-2-7
DATE: 08/03/2005
STAFF: lec
RELEASE: A
CHANGES: 
1) copy NOMEN FASTA file to private HUGO directory

TAG:  qcreports_db-3-2-2-6
TAG:  qcreports_db-3-2-2-5
DATE: 08/01/2005
STAFF: lec
RELEASE: A
CHANGES: 
1) TR 6942/GO_gp2protein.py
2) added VOC_MPDups.sql

TAG:  qcreports_db-3-2-2-4
DATE: 07/29/2005
STAFF: lec
RELEASE: A
CHANGES: 
1) TR 7003/GXD_Images.py, GXD_LackingImages.py

TAG:  qcreports_db-3-2-2-3
DATE: 07/15/2005
STAFF: lec
RELEASE: A
CHANGES: 
1) TR 6490/VOC_GODups.sql

TAG:  qcreports_db-3-2-2-2
DATE: 07/14/2005
STAFF: lec
RELEASE: A
CHANGES: 
1) tweaked GXD_FullCodeable.py

TAG:  qcreports_db-3-2-2-1
DATE: 07/01/2005
STAFF: lec
RELEASE: A
CHANGES: 
1) fixd GXD_DupGenotype.py
2) TR 6947

TAG:  qcreports_db-3-2-0-9
TAG:  qcreports_db-3-2-0-8
DATE: 06/28/2005
STAFF: lec
RELEASE: A
CHANGES: 
1) TR 6946; removed GXD_SpecMissingAllele.sql
2) TR 6947

TAG:  qcreports_db-omim-1
DATE: 08/09/2005
STAFF: lec
RELEASE: A
CHANGES: 
1) OMIM

TAG:  qcreports_db-BP-omim
DATE: 06/28/2005
STAFF: lec
RELEASE: A
CHANGES: 
1) branch point tag for OMIM

TAG:  qcreports_db-3-2-0-7
DATE: 06/10/2005
STAFF: lec
RELEASE: A
CHANGES: 