@@ -161,16 +161,18 @@ be used at times to test reports for <I>future</I> public consumption.)
 
 <A NAME="go"><B>GO</B></A>
 <OL>
-<LI><A HREF="/data/reports/qcreports_db/output/MRK_RatNoGO.sql.rpt">Mouse Genes that have Rat Homologs but no GO associations</A>
-<LI><A HREF="/data/reports/qcreports_db/output/MRK_NoGO_A.rpt">Genes (neither 'RIKEN' or 'expressed' or 'EST') with no GO Associations and reference count excludes data loads and GenBank submissions</A>
-<LI><A HREF="/data/reports/qcreports_db/output/MRK_NoGO_B.rpt">Genes (neither 'RIKEN' or 'expressed' or 'EST') with no GO Associations</A>
-<LI><A HREF="/data/reports/qcreports_db/output/MRK_NoGO_C.rpt">Genes (neither 'RIKEN' or 'expressed' or 'EST') with no GO Associations and reference count includes only data loads and GenBank submissions</A>
-<LI><A HREF="/data/reports/qcreports_db/output/MRK_NoGO_D.html">Genes (neither 'RIKEN' or 'expressed' or 'EST') with no GO Associations with references that are selected for GO but have not been used</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_RatNoGO.sql.rpt">Mouse Genes that have Rat Homologs but no GO Annotations</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_NoGO_A.rpt">Genes (neither 'RIKEN' or 'expressed' or 'EST') with no GO Annotations and reference count excludes data loads and GenBank submissions</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_NoGO_B.rpt">Genes (neither 'RIKEN' or 'expressed' or 'EST') with no GO Annotations</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_NoGO_C.rpt">Genes (neither 'RIKEN' or 'expressed' or 'EST') with no GO Annotations and reference count includes only data loads and GenBank submissions</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_NoGO_D.html">Genes (neither 'RIKEN' or 'expressed' or 'EST') with no GO Annotations with references that are selected for GO but have not been used</A>
 <LI><A HREF="/data/reports/qcreports_db/output/MRK_AllNoGO.html">Genes with references that are selected for GO but have not been used</A>
-<LI><A HREF="/data/reports/qcreports_db/output/MRK_GOIEA_A.rpt">Genes (neither 'RIKEN' or 'expressed' or 'EST') with GO Associations of evidence IEA only and reference count excludes data loads and GenBank submissions</A>
-<LI><A HREF="/data/reports/qcreports_db/output/MRK_GOIEA_B.rpt">Genes (neither 'RIKEN' or 'expressed' or 'EST') with GO Associations of evidence IEA only</A>
-<LI><A HREF="/data/reports/qcreports_db/output/MRK_GOIEA_C.rpt">Genes (neither 'RIKEN' or 'expressed' or 'EST') with GO Associations of evidence IEA only and reference count includes only data loads and GenBank submissions</A>
-<LI><A HREF="/data/reports/qcreports_db/output/MRK_GOIEA_D.html">Genes (neither 'RIKEN' or 'expressed' or 'EST') with GO Associations of evidence IEA only and with references that are selected for GO but have not been used</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_GOIEA_A.rpt">Genes (neither 'RIKEN' or 'expressed' or 'EST') with GO Annotations of evidence IEA only and reference count excludes data loads and GenBank submissions</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_GOIEA_B.rpt">Genes (neither 'RIKEN' or 'expressed' or 'EST') with GO Annotations of evidence IEA only</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_GOIEA_C.rpt">Genes (neither 'RIKEN' or 'expressed' or 'EST') with GO Annotations of evidence IEA only and reference count includes only data loads and GenBank submissions</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_GOIEA_D.html">Genes (neither 'RIKEN' or 'expressed' or 'EST') with GO Annotations of evidence IEA only and with references that are selected for GO but have not been used</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_GOIEA_E.rpt">Genes with OMIM Annotations and either GO Annotations of evidence IEA only or no GO Annotations</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_GOIEA_F.rpt">Genes with Alleles and either GO Annotations of evidence IEA only or no GO Annotations</A>
 <LI><A HREF="/data/reports/qcreports_db/output/MRK_GOGold_A.rpt">All Genes with Annotations to IDA, IGI, IMP, IPI, TAS</A>
 <LI><A HREF="/data/reports/qcreports_db/output/MRK_GOGold_B.rpt">All Genes with Annotations to IDA, IGI, IMP, IPI</A>
 <LI><A HREF="/data/reports/qcreports_db/output/MRK_GOGold_C.rpt">All Genes with multiple Annotations to IDA, IGI, IMP, IPI, TAS</A>
