@@ -1,3 +1,9 @@
+TAG:  qcreports_db-3-3-0-4
+DATE: 09/28/2005
+STAFF: lec
+CHANGES:
+1) TR 7125; added MRK_GOEIA.py (reports 2E, 2F)
+
 TAG:  qcreports_db-3-3-0-3
 TAG:  qcreports_db-3-3-0-2
 DATE: 09/27/2005
